# typeape

./: CMakeLists.txt  LICENSE  Makefile  PKGBUILD  README.md
data/: typeape.desktop  words-more.txt
debian/: control  copyright  rules
docs/: CHANGELOG.md
include/: dictionary.hpp  display.hpp  game.hpp  input.hpp  rowbuffer.hpp  statstracker.hpp  wordtracker.hpp
scripts/: build.sh  install.sh  uninstall.sh
src/: dictionary.cpp  display.cpp  game.cpp  input.cpp  main.cpp  rowbuffer.cpp  statstracker.cpp  wordtracker.cpp
